--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html{
     background-position: center center;
     background-attachment: fixed;
     background-size: cover;
+    position: relative;
 }
 
 .container {
@@ -20,9 +21,22 @@ html{
     position: absolute;
 }
 
+.message{
+    color: #fff;
+    font-family: sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    position: absolute;
+    top: 45%;
+    left: 51%;
+    z-index: -1;
+    transform: translate(-50%, -50%);
+}
+
 .button{
     position: absolute;
     opacity: 0;
+    display: none;
     /* transition: ease 1.5s; */
 }
 
